# hordekit

./: .safety-project.ini  Makefile  README.md  mkdocs.yml  pyproject.toml
.claude/commands/: new-cipher.md
.github/workflows/: README.md  ci.yml  docs.yml  release.yml  security.yml
demo/: __init__.py  demo_affine.py  demo_atbash.py  demo_base_substitution.py  demo_caesar.py  demo_rot13.py  demo_rot47.py
docs/: README.md  cipher-template.md  index.md  installation.md  quickstart.md  roadmap.md
docs/api/: base_classes.md  crypto_utils.md
docs/crypto/attacks/generic/: brute_force.md  dictionary.md
docs/crypto/attacks/hill/: known_plaintext.md
docs/crypto/attacks/substitution/: frequency.md  ioc.md
docs/crypto/attacks/vigenere/: kasiski.md
docs/crypto/classical/substitution/: affine.md  atbash.md  autokey.md  baconian.md  beaufort.md  caesar.md  foursquare.md  hill.md  playfair.md  polybius.md  porta.md  rot13.md  rot47.md  vigenere.md
docs/crypto/symmetric/substitution/: affine.md  atbash.md  caesar.md  index.md  rot13.md  rot47.md
docs/development/: contributing.md  testing.md
hordekit/: __init__.py
hordekit/core/: __init__.py  base.py  result.py
hordekit/crypto/: __init__.py
hordekit/crypto/attacks/: __init__.py  scoring.py
hordekit/crypto/attacks/generic/: __init__.py  brute_force.py  dictionary.py
hordekit/crypto/attacks/hill/: __init__.py  known_plaintext.py
hordekit/crypto/attacks/substitution/: __init__.py  frequency.py  ioc.py
hordekit/crypto/attacks/vigenere/: __init__.py  kasiski.py
hordekit/crypto/classical/: __init__.py
hordekit/crypto/classical/substitution/: __init__.py  affine.py  atbash.py  autokey.py  baconian.py  beaufort.py  caesar.py  foursquare.py  hill.py  playfair.py  polybius.py  porta.py  rot13.py  rot47.py  vigenere.py
hordekit/crypto/cryptoanalysis/: ngram_score.py
hordekit/crypto/symmetric/: __init__.py
hordekit/crypto/symmetric/substitution/: __init__.py  affine.py  atbash.py  base_substitution.py  caesar.py  rot13.py  rot47.py
hordekit/crypto/utils/: __init__.py  attack_methods.py  crypto_algorithm.py
hordekit/legacy/ngram_score/: __init__.py  ngram_score.py
hordekit/osint/: __init__.py
hordekit/web/: __init__.py
tests/: base_crypto_test.py
tests/core/: test_result.py
tests/crypto/attacks/: test_brute_force.py  test_dictionary.py  test_ioc.py  test_kasiski.py
tests/crypto/attacks/hill/: test_known_plaintext.py
tests/crypto/classical/substitution/: test_affine.py  test_atbash.py  test_autokey.py  test_baconian.py  test_beaufort.py  test_caesar.py  test_foursquare.py  test_hill.py  test_playfair.py  test_polybius.py  test_porta.py  test_rot13.py  test_rot47.py  test_vigenere.py
tests/crypto/symmetric/substitution/: test_affine.py  test_affine.yml  test_atbash.py  test_base_substitution.py  test_caesar.py  test_caesar.yml  test_rot13.py  test_rot47.py
