[project]
name = "hordekit"
version = "0.1.5"
description = "hordekit"
dependencies = []
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hordekit"]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
    "mypy>=1.17.0",
    "bandit>=1.8.0",
    "faker>=37.5.3",
    "parametrize-from-file>=0.20.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "build>=1.3.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.16",
    "mkdocstrings>=0.30.0",
    "mkdocstrings-python>=1.16.12",
]

[[tool.uv.index]]
name = "safety"
url = "https://pkgs.safetycli.com/repository/horde/project/hordekit/pypi/simple/"
default = false

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [".venv", "build", "dist", ".git"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "C4",  # flake8-comprehensions
]
ignore = ["E203"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true

[tool.bandit]
exclude_dirs = [".venv", "tests"]
skips = ["B101"]  # assert в тестах — норм

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings"
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]
